fix: 정적 파일 읽는 방식 수정